fix: dark mode

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,6 +2,8 @@
 
 @config "../../tailwind.config.ts";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
   so we've added these compatibility styles to make sure everything still
@@ -43,6 +45,13 @@
     --black: #000000;
     --k-accent-light-3: #ffaee1;
     --steps-active-color: 97 136 231;
+  }
+
+  :root {
+    /* $navbar-desktop-min-height */
+    --navbar-desktop: 80px;
+    /* $navbar-mobile-min-height */
+    --navbar-mobile: 64px;
   }
 
   :root,
